fixed submit click issue on mobile when opacity is zero

--- a/src/components/UI/Animations/Animations.module.scss
+++ b/src/components/UI/Animations/Animations.module.scss
@@ -16,25 +16,31 @@
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
+    visibility: hidden;
   }
   to {
     opacity: 1;
+    visibility: visible;
   }
 }
 @-moz-keyframes fadeIn {
   from {
     opacity: 0;
+    visibility: hidden;
   }
   to {
     opacity: 1;
+    visibility: visible;
   }
 }
 @keyframes fadeIn {
   from {
     opacity: 0;
+    visibility: hidden;
   }
   to {
     opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -56,25 +62,31 @@
 @-webkit-keyframes fadeOut {
   from {
     opacity: 1;
+    visibility: visible;
   }
   to {
     opacity: 0;
+    visibility: hidden;
   }
 }
 @-moz-keyframes fadeOut {
   from {
     opacity: 1;
+    visibility: visible;
   }
   to {
     opacity: 0;
+    visibility: hidden;
   }
 }
 @keyframes fadeOut {
   from {
     opacity: 1;
+    visibility: visible;
   }
   to {
     opacity: 0;
+    visibility: hidden;
   }
 }
 
@@ -99,11 +111,14 @@
 @-webkit-keyframes fadeInUp {
   0% {
     opacity: 0;
+
     -webkit-transform: translateY(20px);
+    visibility: hidden;
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
+    visibility: visible;
   }
 }
 
@@ -111,11 +126,13 @@
   0% {
     opacity: 0;
     -moz-transform: translateY(20px);
+    visibility: hidden;
   }
 
   100% {
     opacity: 1;
     -moz-transform: translateY(0);
+    visibility: visible;
   }
 }
 
@@ -123,11 +140,13 @@
   0% {
     opacity: 0;
     -o-transform: translateY(20px);
+    visibility: hidden;
   }
 
   100% {
     opacity: 1;
     -o-transform: translateY(0);
+    visibility: visible;
   }
 }
 
@@ -135,15 +154,15 @@
   0% {
     opacity: 0;
     transform: translateY(20px);
+    visibility: hidden;
   }
 
   100% {
     opacity: 1;
     transform: translateY(0);
+    visibility: visible;
   }
 }
-
-
 
 .FadeInDown {
   opacity: 1;
@@ -164,10 +183,12 @@
   0% {
     opacity: 0;
     -webkit-transform: translateY(-20px);
+    visibility: hidden;
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
+    visibility: visible;
   }
 }
 
@@ -175,11 +196,13 @@
   0% {
     opacity: 0;
     -moz-transform: translateY(-20px);
+    visibility: hidden;
   }
 
   100% {
     opacity: 1;
     -moz-transform: translateY(0);
+    visibility: visible;
   }
 }
 
@@ -187,11 +210,13 @@
   0% {
     opacity: 0;
     -o-transform: translateY(-20px);
+    visibility: hidden;
   }
 
   100% {
     opacity: 1;
     -o-transform: translateY(0);
+    visibility: visible;
   }
 }
 
@@ -199,9 +224,11 @@
   0% {
     opacity: 0;
     transform: translateY(-20px);
+    visibility: hidden;
   }
   100% {
     opacity: 1;
     transform: translateY(0);
+    visibility: visible;
   }
 }
